<resources>
    <string name="app_name">Componentes</string>
    <string name="scrollView_text">Ejemplo de ScrollView</string>
    <string name="buttonName_text">Presioname</string>
    <string name="buttonName_text1">Boton de Andriod 1</string>
    <string name="buttonName_text2">Boton de Android 2</string>
    <string name="buttonName_text3">Boton de Android 3</string>
    <string name="button1Name_text01">Este es un boton simple</string>
    <string name="button1Name_text02">Este es el boton personalizado</string>
    <string name="button1Name_text023">Este es el boton con gradiente</string>
    <string name="editText_TextView1">Android EditText Example</string>
    <string name="editText_EditFirtsName">Enter Your First Name</string>
    <string name="editText_EditLastName">Enter Your Last Name</string>
    <string name="editText_ButtonRegister">Register</string>
    <string name="checkAc_NameText">Android CheckBox Example</string>
    <string name="checkAc_AndroidCheck">Android</string>
    <string name="checkAc_JavaCheck">Java</string>
    <string name="checkAc_XMLCheck">XML</string>
    <string name="checkAc_HTMLCheck">HTML</string>
    <string name="checkAc_CSSCheck">CSS</string>
    <string name="checkAc_JqueryCheck">jQuery</string>
    <string name="checkAc_PHPCheck">PHP</string>
    <string name="checkAc_ASPCheck">ASP</string>
    <string name="radioAc_QuestionText">Entre los diseños que figuran a continuación, ¿cuál encontraste el más fácil?</string>
    <string name="radioAc_RadioOption1">Relative Layout</string>
    <string name="radioAc_RadioOption2">Linear Layout</string>
    <string name="radioAc_RadioOption3">Frame Layout</string>
    <string name="radioAc_RadioOption4">Table Layout</string>
    <string name="radioAc_RadioOption5">Grid Layout</string>
    <string name="radioAc_ButtonName">Answer</string>
    <string name="switchAc_SwitchName1">Android Switch Button 1</string>
    <string name="switchAc_TextName1">Android Switch Button</string>
    <string name="switchAc_SwitchName2">Android Switch Button 2</string>
    <string name="switchAc_TextName3">Android Switch Button</string>
    <string name="toggleAc_Toggle1">First ToggleButton</string>
    <string name="toggleAc_ToggleText1">ToggleButton Status</string>
    <string name="toggleAc_Toggle2">Second ToggleButton</string>
    <string name="toggleAc_ToggleText2">ToggleButton Status</string>
    <string name="ratingBar_NameText">Android RatingBar Example</string>
    <string name="ratingBar_ButtonName">Submit</string>
    <string name="ratingBar_TextResult">Your Rate</string>
    <string name="spinnerAc_TextName">Android Spinner Example</string>
    <string name="scrollAc_ButtonName">Show value</string>
    <string name="progressAc_HintEdit">Enter a number bettwen 0 and 100</string>
    <string name="progressAc_ButtonName">Show</string>
    <string name="dateAc_ButtonName1">Pick Date</string>
    <string name="dateAc_Text1">Display Date</string>
    <string name="timeAc_ButtonName1">Change Time</string>
    <string name="timeAc_Text1">Display Current Time</string>
    <string name="floatindAc_Text1">Android Floating Action Button (FAB) Example Using Design Support library</string>
    <string name="labelFAc_EditHint1">Your Name</string>
    <string name="labelFAc_EditHint2">Email</string>
    <string name="labelFAc_EditHint3">Password</string>
    <string name="seekAc_Text1">Android SeekBar Example</string>
    <string name="seekAc_Text2">Progress: 0/6</string>
    <string name="dialogAc_ButtonName">Show Simple Android Dialog</string>
    <string name="dialogAc_Text1">Simple Android Dialog Box</string>
    <string name="alertAc_ButtonName">Show Custom Android Dialog</string>
    <string name="alertAc_Text1">Custom Android Dialog Box</string>
    <string name="custDialog_Text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi hic culpa, velit molestiae! Facilis libero veniam rerum asperiores necessitatibus.</string>
    <string name="custDialog_ButtonName1">Calcel</string>
    <string name="custDialog_ButtonName2">OK</string>
    <string name="snackBar_ButtonName">Show Snackbar</string>
    <string name="notificationAc_ButtonName">Show Notification</string>
    <string name="imageAc_ButtonName">Previous Image</string>
    <string name="imageAc_ButtonName2">Next Image</string>
    <string name="calendarAc_Text1">Fecha:</string>
    <string-array name="android_layout_arrays">
        <item>Choose a Layout</item>
        <item>LinearLayout</item>
        <item>RelativeLayout</item>
        <item>FrameLayout</item>
        <item>TableLayout</item>
        <item>AbsoluteLayout</item>
        <item>GridLayout</item>
    </string-array>


</resources>
