<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/editText_MarginLinear"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="rmiya.com.componentes.EditTextActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/editText_TextView1"
        android:textSize="@dimen/editText_TextSize" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editText_EditFirtsName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_MarginTopEdit"
        android:hint="@string/editText_EditLastName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_MarginTopButton"
        android:onClick="register"
        android:text="@string/editText_ButtonRegister" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/editText_ColorText"
        android:textSize="@dimen/editText_TextSize" />

</LinearLayout>
