<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rmiya.com.componentes.ButtonActivity">

    <LinearLayout
        android:padding="@dimen/buttonLinear_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1Name_text01"
            android:background="@color/buttonColor_simple"
            android:padding="@dimen/buttonPadding_01"
            android:onClick="PressButton"
            />

        <Button
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1Name_text02"
            android:background="@drawable/border_radius"
            style="@style/Widget.AppCompat.Button"
            />

        <Button
            android:padding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1Name_text023"
            android:background="@drawable/gradient_style"
            style="@style/Widget.AppCompat.Button"
            />


    </LinearLayout>

</ScrollView>
